# heat-flow-simulator

./: .gitignore  AGENT.md  README.md  pyproject.toml
docs/: plan.md
examples/: sample_config.yaml
src/heat_flow_simulator/: __init__.py  cli.py  database.py  models.py
tests/: __init__.py  test_database.py  test_models.py
